# racing-robots

./: README.md  animation.js  eventListeners.js  index.html  main.js  manifest.json  movement.js  newTarget.js  obstacles.js  recording.js  robots.js  service-worker.js  shareBoard.js  styles.css
solver/KevinCox/: .gitignore  .gitlab-ci.yml  CODEOWNERS  Cargo.toml  LICENSE  README.md  default.nix  renovate.json  tsconfig.json
solver/KevinCox/benches/: quick.rs  solve.rs
solver/KevinCox/games/: 11-mirrors.txt  14-polymorphicprism-83.txt  17-rotated.txt  20-mirrors.txt  24-dhansel.txt  25-umexcuseme.txt  michael-fogleman.txt
solver/KevinCox/npm/: package.json
solver/KevinCox/src/: board.rs  board_test.rs  cell.rs  cell_test.rs  direction.rs  driftingdroids.rs  format.rs  format_test.rs  game.rs  game_test.rs  lib.rs  mirror.rs  position.rs  position_test.rs  precompute.rs  quadrant.rs  quarter.rs  robot.rs  solution.rs  solver.rs  solver_test.rs  target.rs  web.rs
solver/KevinCox/tests/: solutions.rs
solver/KevinCox/tests/solutions/: 10.txt  2019-04-10_11.txt  2019-04-10_8.txt  2019-04-10_8_2.txt  2019-04-10_9.txt  2019-04-20_12.txt  2019-04-20_12_2.txt  2019-04-24_7.txt  2019-05-03_9.txt  8.txt  mirror.txt  (+10 more)
solver/KevinCox/typescript/: BoardTextDialog.ts  Button.ts  CancelledError.ts  CellDialog.ts  Dialog.ts  GameUI.ts  KeyedSet.ts  MainUI.ts  PlayUI.ts  RRWorker.ts  SolutionUI.ts  TimerButton.ts  UserError.ts  consts.ts  defs.d.ts  index.ts  json.ts  params.ts  toast.ts  util.ts  worker.ts
solver/KevinCox/web/: index.html  manifest.json  service-worker.js
(+4 files in other folders)
